package PS;

message AUCData {
  repeated int64 tp_key = 1;
  repeated uint64 tp_count = 2;

  repeated int64 fp_key = 3;
  repeated uint64 fp_count = 4;

  // number of validation examples
  optional uint32 num_example = 5;

  optional double click_average = 6;
  optional double prediction_average = 7;
}

// message AccuracyData {
//   optional uint64
// }
