package PS;

message ValidationPartialExample {
  optional uint32 id = 1;  // example ID
  repeated uint64 keys = 2;
}

message ValidationData {
  repeated ValidationPartialExample partial_examples = 1;
}
